--- a/footer.html
+++ b/footer.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- Footer -->
-    <footer class="page-footer font-small bg-light">
+    <footer class="page-footer font-small bg-light mt-4">
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
