regreso a formularios html

--- a/header.html
+++ b/header.html
@@ -10,10 +10,10 @@
 
 <body>
     <nav class="nav navi d-flex justify-content-between mx-auto col-9 pt-3">
-        <a class="p-2 text-muted" href="index.php">Inicio</a>
-        <a href="inicio_sesion.php" class="p-2 text-muted">inicio de sesion</a>
-        <a class="p-2 text-muted" href="sobre_mi.php">Acerca de mi</a>
-        <a class="p-2 text-muted" href="descripcion_blog.php">Descripcion del blog</a>
+        <a class="p-2 text-muted" href="index.html">Inicio</a>
+        <a href="inicio_sesion.html" class="p-2 text-muted">inicio de sesion</a>
+        <a class="p-2 text-muted" href="sobre_mi.html">Acerca de mi</a>
+        <a class="p-2 text-muted" href="descripcion_blog.html">Descripcion del blog</a>
         <a class="p-2 text-muted" href="#">Contenido del curso</a>
     </nav>
 
