--- a/estandares.html
+++ b/estandares.html
@@ -11,8 +11,8 @@
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script>
         $(function() {
-            $("#header").load("header.php");
-            $("#footer").load("footer.php");
+            $("#header").load("header.html");
+            $("#footer").load("footer.html");
         });
     </script>
 </head>
@@ -21,7 +21,7 @@
 
     <div id="particles-js"></div>
 
-    <div id="header" ></div>
+    <div id="header"></div>
 
 
 
@@ -142,8 +142,8 @@
 
 
     <!-- Footer -->
-    
-    <div id="footer" ></div>
+
+    <div id="footer"></div>
 
     <!-- Footer -->
     <script src="js/particles.min.js"></script>
