--- a/importancia.html
+++ b/importancia.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" href="bootstrap-4.4.1-dist/css/bootstrap.css">
     <link rel="stylesheet" href="bootstrap-4.4.1-dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script>
+        $(function() {
+            $("#header").load("header.html");
+            $("#footer").load("footer.html");
+        });
+    </script>
 </head>
 
 <body>
 
     <div id="particles-js"></div>
 
-    <nav class="nav navi d-flex justify-content-between mx-auto col-9 pt-3">
-        <a class="p-2 text-muted" href="index.html">Inicio</a>
-        <a class="p-2 text-muted" href="sobre_mi.html">Acerca de mi</a>
-        <a class="p-2 text-muted" href="descripcion_blog.html">Descripcion del blog</a>
-        <a class="p-2 text-muted" href="#">Contenido del curso</a>
-
-
-    </nav>
+    <div id="header"></div>
 
 
 
@@ -97,15 +97,8 @@
 
 
     <!-- Footer -->
-    <footer class="page-footer font-small bg-light">
 
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="#"> TecNM Roque Campus Apaseo el Alto</a>
-        </div>
-        <!-- Copyright -->
-
-    </footer>
+    <div id="footer"></div>
     <!-- Footer -->
     <script src="js/particles.min.js"></script>
     <script src="js/app.js"></script>
