--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -11,8 +11,8 @@
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script>
         $(function() {
-            $("#header").load("header.php");
-            $("#footer").load("footer.php");
+            $("#header").load("header.html");
+            $("#footer").load("footer.html");
         });
     </script>
 </head>
@@ -66,7 +66,7 @@
 
 
     <!-- Footer -->
-    <div id="footer" ></div>
+    <div id="footer"></div>
     <!-- Footer -->
     <script src="js/particles.min.js"></script>
     <script src="js/app.js"></script>
