modificación estable con conexion por post

--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -42,6 +42,7 @@
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" name="contraseña" class="form-control" plasceholder="Contraseña" id="exampleInputPassword1">
                     </div>
+                    <a href="registro.html">Requistrate aqui</a>
 
                     <div class="boton-s mx-auto col-4">
                         <button type="submit" id="mainlogin" name="btnGuardar" class="btn btn-primary">Login</button>
