--- a/registro.html
+++ b/registro.html
@@ -48,9 +48,15 @@
                 </div>
                 <div class="row">
                     <div class="col-10 mx-auto mt-3">
-                        <form action="">
+                        <form action="conexion/conex.php" method="POST">
                             <div class="input-group">
-                                <input type="text" class="form-control" name="Usuario" placeholder="nombre de usuario">
+                                <input type="text" class="form-control mb-3" name="Usuario" placeholder="Nombre de Usuario">
+                            </div>
+                            <div class="input-group">
+                                <input type="text" class="form-control mb-3" name="Ape_p" placeholder="Apellido Paterno">
+                            </div>
+                            <div class="input-group">
+                                <input type="text" class="form-control" name="Ape_m" placeholder="Apellido Materno">
                             </div>
                             <div class="input-group mb-3 mt-3">
                                 <div class="input-group-prepend">
@@ -75,9 +81,10 @@
         </div>
 
     </div>
-    <div id="footer"></div>
+
     <script src="js/particles.min.js"></script>
     <script src="js/app.js"></script>
+    <div id="footer"></div>
 </body>
 
 </html>
