Revert "primera prueba con conex"
This reverts commit fe76f3e5c61572b9bfda90ebc2e04454c7be225b.

--- a/registro.html
+++ b/registro.html
@@ -48,15 +48,9 @@
                 </div>
                 <div class="row">
                     <div class="col-10 mx-auto mt-3">
-                        <form action="conexion/conex.php" method="POST">
+                        <form action="">
                             <div class="input-group">
-                                <input type="text" class="form-control mb-3" name="Usuario" placeholder="Nombre de Usuario">
-                            </div>
-                            <div class="input-group">
-                                <input type="text" class="form-control mb-3" name="Ape_p" placeholder="Apellido Paterno">
-                            </div>
-                            <div class="input-group">
-                                <input type="text" class="form-control" name="Ape_m" placeholder="Apellido Materno">
+                                <input type="text" class="form-control" name="Usuario" placeholder="nombre de usuario">
                             </div>
                             <div class="input-group mb-3 mt-3">
                                 <div class="input-group-prepend">
@@ -81,10 +75,9 @@
         </div>
 
     </div>
-
+    <div id="footer"></div>
     <script src="js/particles.min.js"></script>
     <script src="js/app.js"></script>
-    <div id="footer"></div>
 </body>
 
 </html>
